--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-sass-guidelines",
+  "rules": {
+    "indentation": "tab",
+    "string-quotes": "double",
+    "color-named": "always-where-possible",
+    "number-leading-zero": null
+  }
 }
