--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "simplon-allo-cline-clone",
   "version": "1.0.0",
   "description": "Simplon JS 2nd TP",
-  "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "sass --watch assets/scss:dist/css",
-    "build": "sass assets/scss:dist/css"
+    "watch": "webpack --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -25,9 +25,27 @@
     "materialize-css": "^1.0.0-rc.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.0.0",
+    "cssnano": "^4.1.10",
     "eslint": "^7.5.0",
+    "eslint-loader": "^4.0.2",
+    "file-loader": "^6.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "postcss-scss": "^2.1.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "style-loader": "^1.2.1",
     "stylelint": "^13.6.1",
     "stylelint-config-sass-guidelines": "^7.0.0",
-    "stylelint-order": "^4.1.0"
+    "stylelint-order": "^4.1.0",
+    "stylelint-webpack-plugin": "^2.1.0",
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12",
+    "wepack-cli": "0.0.1-security"
   }
 }
