--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "animate.css": "^4.1.0",
     "autocompleter": "^6.0.3",
     "axios": "^0.19.2",
-    "materialize-css": "^1.0.0-rc.2"
+    "materialize-css": "^1.0.0-rc.2",
+    "query-string": "^6.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
