--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autocompleter": "^6.0.3",
     "axios": "^0.19.2",
     "materialize-css": "^1.0.0-rc.2",
+    "progressbar.js": "^1.1.0",
     "query-string": "^6.13.1"
   },
   "devDependencies": {
