--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/Iswenzz/Simplon-AlloCineClone#readme",
   "dependencies": {
+    "@types/materialize-css": "^1.0.8",
     "animate.css": "^4.1.0",
     "autocompleter": "^6.0.3",
     "axios": "^0.19.2",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@types/node": "^14.0.27",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.0.0",
     "cssnano": "^4.1.10",
@@ -46,6 +48,8 @@
     "stylelint-config-sass-guidelines": "^7.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-webpack-plugin": "^2.1.0",
+    "ts-loader": "^8.0.1",
+    "typescript": "^3.9.7",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
     "wepack-cli": "0.0.1-security"
