--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "animate.css": "^4.1.0",
     "autocompleter": "^6.0.3",
     "axios": "^0.19.2",
+    "fork-ts-checker-webpack-plugin": "^5.0.12",
     "materialize-css": "^1.0.0-rc.2",
     "progressbar.js": "^1.1.0",
     "query-string": "^6.13.1"
@@ -31,6 +32,8 @@
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.0.0",
     "cssnano": "^4.1.10",
