--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "fork-ts-checker-webpack-plugin": "^5.0.12",
     "materialize-css": "^1.0.0-rc.2",
     "progressbar.js": "^1.1.0",
-    "query-string": "^6.13.1"
+    "query-string": "^6.13.1",
+    "youtube-player": "^5.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
