--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^7.5.0",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.0.0",
+    "postcss-font-magician": "^2.3.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
