--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^4.0.0",
     "cssnano": "^4.1.10",
     "eslint": "^7.5.0",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^4.3.0",
     "postcss-font-magician": "^2.3.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
