--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^7.5.0",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.0.0",
+    "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "postcss-font-magician": "^2.3.1",
     "postcss-import": "^12.0.1",
