--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
 	"compilerOptions": {
 		"moduleResolution": "node",
 		"outDir": "./dist/",
-		"module": "es6",
-		"target": "es5",
+		"module": "ES2020",
+		"target": "es6",
 		"jsx": "react",
 		"allowJs": true
 	}
