--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "webpack --watch",
-    "build": "webpack"
+    "start": "webpack-dev-server --mode=development",
+    "start:prod": "webpack-dev-server --mode=production",
+    "build": "webpack --progress --mode=production"
   },
   "repository": {
     "type": "git",
@@ -19,13 +20,10 @@
   },
   "homepage": "https://github.com/Iswenzz/Simplon-AlloCineClone#readme",
   "dependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/runtime": "^7.11.2",
     "@types/materialize-css": "^1.0.8",
-    "animate.css": "^4.1.0",
     "autocompleter": "^6.0.3",
     "axios": "^0.19.2",
-    "fork-ts-checker-webpack-plugin": "^5.0.12",
     "materialize-css": "^1.0.0-rc.2",
     "progressbar.js": "^1.1.0",
     "youtube-player": "^5.5.2"
@@ -34,6 +32,7 @@
     "@babel/core": "^7.11.1",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
@@ -49,12 +48,13 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "mini-css-extract-plugin": "^0.11.0",
+    "postcss-flexbugs-fixes": "^4.2.1",
     "postcss-font-magician": "^2.3.1",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "postcss-scss": "^2.1.1",
+    "postcss-safe-parser": "^4.0.2",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
@@ -66,6 +66,6 @@
     "typescript": "^3.9.7",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
-    "wepack-cli": "0.0.1-security"
+    "webpack-dev-server": "^3.11.0"
   }
 }
